@@ -27,14 +27,14 @@ h2         {color:#300505;
             border-width:0px 0px 1px 10px;
             border-color:#000000;
             padding-left:5px;
-            padding-top:5px;
+            padding-top:10px;
             padding-bottom:6px;
             background-color:#bbd5c5;
             font-family:sans-serif;
             font-size:16pt;}
             
 h3         {color:#003366;
-            margin:3pt 15pt;
+            margin:15pt 5pt;
             font-family:sans-serif;
             font-size:14pt;}
 
