@@ -1,5 +1,8 @@
 LDFLAGS		= -lm
 CPPFLAGS	= -g -Wall -O3 -Wextra
+#CXX		= c++
+#CPP		= c++
+CXX		= g++
 CPP		= g++
 RM      	= rm
 LIBOBJS		= endflib.o endfio.o
