@@ -1,3 +1,9 @@
+2019-12-16  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/endflib.cpp (ENDFWriteRecord): updated
+	argument of ENDFWriteRecord changed from pointer
+	to actual Record object
+
 2019-12-15  KAWANO Toshihiko  <kawano@lanl.gov>
 
 	* tools/deceheader.cpp: new file
